[tool.poetry]
name = "banner-api"
version = "0.1.0"
description = ""
authors = ["likeinlife <likeinlife@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.1"
structlog = "^24.1.0"
asgi-correlation-id = "^4.3.1"
orjson = "^3.10.0"
uvicorn = "^0.29.0"
dependency-injector = "^4.41.0"
sqlalchemy = "2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"

[tool.poetry.group]
dev.optional = true
test.optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.5"
pre-commit = "^3.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**/*.py" = ["S101"]
"**/cli/**/*.py" = ["T201"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"
