[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["likeinlife <likeinlife@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
requests = "^2.31.0"
pydantic-settings = "^2.2.1"
pytest-ordering = "^0.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.5"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "D203",
    "D212",
    "D4",
    "ANN",
    "FA",
    "TRY",
    "FBT",
    "EM",
    "N8",
    "DTZ",
    "B904",
    "PGH",
    "S311",
    "PLR",
    "COM812",
    "ISC001",
    "A003",
]
exclude = ["__init__.py"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**/*.py" = ["S101"]
"**/cli/**/*.py" = ["T201"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"
